fixed tab to close alignment finally

--- a/css/style.scss
+++ b/css/style.scss
@@ -182,9 +182,9 @@ footer { font-family: 'Arial', sans-serif; position: fixed; color: #9e9e9e; bott
 
   button { padding: 10px 0; font-size: 18px; text-align: center; width: 90%; }
 
-  .meta_instructions, .instructions { display: inline-block; }
+  .meta_instructions, .instructions { display: block; }
 
-  .meta_instructions { margin-top: 40px; text-align: center; margin-right: 39%; font-size: 20px; color: #757575; }
+  .meta_instructions { margin-top: 40px; text-align: center; font-size: 20px; color: #757575; }
 
   /* About ME */
   #about_wrap p { margin-bottom: 0px; }
